# react-native-screens

./: .eslintrc.js  .flowconfig  .gitattributes  .gitignore  .gitmodules  .prettierrc.js  .prettierrc.yaml  .swift-format  .yarnrc.yml  404.html  AGENTS.md  CLAUDE.md  Directory.Build.props  LICENSE  README-Fabric.md  README.md  RFC-gamma-base-class-sharing.md  RNCoolModals.podspec  RNSStackOperation.m  RNSStackOperation.mm  RNScreens.podspec  babel.config.js  createNPMPackage.sh  createNativeStackNavigator.js  dever.sh  index.html  jest.config.js  package.json  proder.sh  react-native-reanimated-3.5.0.tgz  react-native-reanimated-3.6.0.tgz  react-native-reanimated-3.7.0.tgz  react-native-safe-area-context-4.8.0.tgz  react-native-screens-0.0.0-2022140101-fabric.tgz  react-native.config.js  sitemap.xml  tsconfig.build.json  tsconfig.json
Example/: App.js  (+24 more)
android/: CMakeLists.txt  build.gradle  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle  settings.gradle.kts  spotless.gradle  spotless.gradle.kts
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: NativeProxy.cpp  NativeProxy.h  OnLoad.cpp  jni-adapter.cpp  listener.cpp  listener.h
android/src/main/jni/: Android.mk  CMakeLists.txt  OnLoad.cpp  RNScreensComponentRegistry.cpp  RNScreensComponentRegistry.h  RNScreensComponentsRegistry.cpp  RNScreensComponentsRegistry.h  rnscreens.cpp  rnscreens.h
android/src/main/res/anim/: rns_bottom_fade_in.xml  rns_bottom_fade_out.xml  rns_default_enter_in_android_13.xml  rns_default_enter_out_android_13.xml  rns_default_exit_in_android_13.xml  rns_default_exit_out_android_13.xml  rns_fade_from.xml  rns_fade_from_bottom.xml  rns_fade_in.xml  rns_fade_out.xml  rns_fade_to.xml  rns_fade_to_bottom.xml  rns_no_animation.xml  rns_no_animation_0.xml  rns_no_animation_20.xml  rns_no_animation_250.xml  rns_no_animation_350.xml  rns_no_animation_medium.xml  rns_slide_in_from_bottom.xml  rns_slide_in_from_right.xml  rns_slide_out_to_bottom.xml  rns_slide_out_to_left.xml
android/src/main/res/anim-v33/: rns_default_enter_out.xml
android/src/main/res/animator/: rns_fade_from_bottom.xml  rns_fade_to_bottom.xml
android/src/main/res/base/anim/: rns_default_enter_in.xml  rns_default_enter_out.xml  rns_default_exit_in.xml  rns_default_exit_out.xml  rns_fade_from_bottom.xml  rns_fade_in.xml  rns_fade_out.xml  rns_fade_to_bottom.xml  rns_ios_background_slide_to_left.xml  rns_ios_from_left_background_close.xml  rns_ios_from_left_background_open.xml  rns_ios_from_left_foreground_close.xml  rns_ios_from_left_foreground_open.xml  rns_ios_from_right_background_close.xml  rns_ios_from_right_background_open.xml  rns_ios_from_right_foreground_close.xml  rns_ios_from_right_foreground_open.xml  rns_no_animation_20.xml  rns_no_animation_250.xml  rns_no_animation_350.xml  rns_no_animation_medium.xml  rns_slide_in_from_bottom.xml  rns_slide_in_from_left.xml  rns_slide_in_from_left_ios.xml  rns_slide_in_from_right.xml  rns_slide_out_to_bottom.xml  rns_slide_out_to_left.xml  rns_slide_out_to_left_ios.xml  rns_slide_out_to_right.xml  rns_slide_out_to_right_ios.xml
android/src/main/res/base/animator/: rns_default_enter_in.xml  rns_default_enter_out.xml  rns_default_exit_in.xml  rns_default_exit_out.xml  rns_fade_from_bottom.xml  rns_fade_in.xml  rns_fade_out.xml  rns_fade_to_bottom.xml  rns_no_animation_20.xml  rns_no_animation_250.xml  rns_no_animation_350.xml  rns_no_animation_medium.xml  rns_slide_in_from_bottom.xml
android/src/main/res/base/drawable/: rns_rounder_top_corners_shape.xml
android/src/main/res/base/drawable-anydpi/: ic_action_search.xml
android/src/main/res/base/layout/: rns_collapsing_toolbar_large_available_space.xml  rns_collapsing_toolbar_large_entire_space.xml  rns_collapsing_toolbar_medium_available_space.xml  rns_collapsing_toolbar_medium_entire_space.xml
android/src/main/res/base/values/: styles.xml  themes.xml
android/src/main/res/v33/anim-v33/: rns_default_enter_in.xml  rns_default_enter_out.xml  rns_default_exit_in.xml  rns_default_exit_out.xml
android/src/main/res/v33/animator-v33/: rns_default_enter_in.xml  rns_default_enter_out.xml  rns_default_exit_in.xml  rns_default_exit_out.xml
android/src/versioned/backgroundcolor/74/: ViewBackgroundUtils.kt
android/src/versioned/backgroundcolor/76/: ViewBackgroundUtils.kt
android/src/versioned/backgroundcolor/latest/: ViewBackgroundUtils.kt
android/src/versioned/backgroundresolver/74/: ViewBackgroundUtils.kt
android/src/versioned/backgroundresolver/76/: ViewBackgroundUtils.kt
android/src/versioned/pointerevents/77/: ScreensCoordinatorLayoutPointerEvents.kt
android/src/versioned/pointerevents/latest/: ScreensCoordinatorLayoutPointerEvents.kt
android/versioned-res/anim-v33/: rns_default_enter_in.xml
common/cpp/: Android.mk  CMakeLists.txt  rnscreens.cpp  rnscreens.h
common/cpp/react/renderer/components/rnscreens/: ComponentDescriptors.h  FrameCorrectionModes.h  HeaderCorrectionModes.h  RNSBottomTabsAccessoryComponentDescriptor.h  RNSBottomTabsAccessoryShadowNode.cpp  RNSBottomTabsAccessoryShadowNode.h  RNSBottomTabsAccessoryState.h  RNSBottomTabsComponentDescriptor.h  RNSBottomTabsShadowNode.cpp  RNSBottomTabsShadowNode.h  RNSBottomTabsState.cpp  RNSBottomTabsState.h  RNSContainedModalHostComponentDescriptor.h  RNSContainedModalHostShadowNode.cpp  RNSContainedModalHostShadowNode.h  RNSContainedModalHostState.h  RNSFormSheetComponentDescriptor.h  RNSFormSheetHostComponentDescriptor.h  RNSFormSheetHostShadowNode.cpp  RNSFormSheetHostShadowNode.h  RNSFormSheetHostState.cpp  RNSFormSheetHostState.h  RNSFormSheetShadowNode.cpp  RNSFormSheetShadowNode.h  RNSFormSheetState.h  RNSFullWindowOverlayComponentDescriptor.h  RNSFullWindowOverlayShadowNode.cpp  RNSFullWindowOverlayShadowNode.h  RNSFullWindowOverlayState.cpp  RNSFullWindowOverlayState.h  RNSInlineModalComponentDescriptor.h  RNSInlineModalShadowNode.cpp  (+101 more)
common/cpp/rnscreens/: RNSScreenComponentDescriptor.h  RNSScreenShadowNode.cpp  RNSScreenShadowNode.h  RNSScreenState.cpp  RNSScreenState.h
(+4862 files in other folders)
